2.5.7: update for vertical tabs & all-tabs xpac: tab sound buttons show media blocked & picture-in-picture state; just like regular tabs, clicking the sound icon plays the blocked media; tabs have tooltips identical to the built-in tab tooltips; set browser.proton.places-tooltip.enabled to true for best results; tab pane can be set to permanently collapsed with a pref; tab pane hover delay can be set with a pref; focus system uses tabstops; fix some minor script bugs; CSS: fix tab tooltip margins;

--- a/uc-tabs-bar.css
+++ b/uc-tabs-bar.css
@@ -572,6 +572,25 @@ panelview .all-tabs-button:not([disabled], [open]):focus {
     margin-inline-start: -2px !important;
 }
 
+.all-tabs-item .all-tabs-secondary-button[activemedia-blocked] {
+    list-style-image: url(chrome://userchrome/content/glyph-play-12.svg) !important;
+    padding: 4px 4px 4px 5px !important;
+    transform: none !important;
+    opacity: 0.7 !important;
+    margin-inline-start: -2px !important;
+}
+
+.all-tabs-item:not(:hover, :focus-within) .all-tabs-secondary-button[pictureinpicture] {
+    list-style-image: url(chrome://userchrome/content/tab-picture-in-picture.svg) !important;
+    padding: 4px 4px 4px 5px !important;
+}
+
+.all-tabs-item .all-tabs-secondary-button[pictureinpicture] {
+    transform: none !important;
+    opacity: 0.7 !important;
+    margin-inline-start: -2px !important;
+}
+
 .all-tabs-secondary-button[close-button] {
     fill-opacity: 0 !important;
     transform: translateX(14px);
